Bug 94543 - Unread count of summary view doesn't get updated when marking all feeds as read
Summary: Unread count of summary view doesn't get updated when marking all feeds as read
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: 1.0-beta8
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-06 15:55 UTC by Teemu Rytilahti
Modified: 2005-03-29 01:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Teemu Rytilahti 2004-12-06 15:55:23 UTC
Version:           1.0-beta8 (using KDE 3.3.89 (CVS >= 20041104), compiled sources)
Compiler:          gcc version 3.3.5 (Debian 1:3.3.5-2)
OS:                Linux (i686) release 2.6.8.1

When you select a feed or a folder with unread articles and then press ctrl+r to mark all articles as read the summary page stays unchanged.

And for summary page we need a node to get a title (and unread count).
Comment 1 Frank Osterfeld 2004-12-06 21:54:02 UTC
CVS commit by osterfeld: 

- better syncing of tray icon and "All Feeds" unread counts (uses signals now)
- update summary view when the shown node has been changed

BUG: 94543


  M +0 -2      akregator_part.cpp   1.114
  M +9 -18     akregator_view.cpp   1.189
  M +2 -2      akregator_view.h   1.75
  M +1 -1      articlelist.cpp   1.32
  M +45 -22    articleviewer.cpp   1.78
  M +6 -2      articleviewer.h   1.29



Comment 2 Mik Mifflin 2005-03-29 01:25:58 UTC
I think I have a similar bug, or a different expression of the same bug.  Sometimes when reading an article from "All Feeds", then from its own feed, the unread articles count is decremented twice.  My systray icon displays "-1" right now, and under "All Feeds", it says "All Feeds (4294967295 unread articles)" (4294967295 being the same as -1, if you ignore signedness).

I'm using KDE 3.4.0 from the Kubuntu packages.