- better syncing of tray icon and "All Feeds" unread counts (uses signals now) - update summary view when the shown node has been changed

BUG: 94543

svn path=/trunk/kdepim/akregator/; revision=368961